refs/ps/testcases/A3/Testcases/Error/tc15.c
int a;
void main()
{
    int b,c;
    read b;
    read c;
    a = ((b*c)>(b-c)) && b>c; 
    print a;
}